# incident-lab

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/: simulator.Dockerfile  sink.Dockerfile
docs/: BEHAVIORS.md  DOCKER.md
src/incident_lab/: main.py
tests/: test_once_mode.py  test_smoke.py
